一些情况下切换摄像头会导致奔溃

--- a/config.ini
+++ b/config.ini
@@ -6,8 +6,19 @@ temp_location = temp
 [CAMERA]
 ip_address = http://admin:admin@192.168.10.10:8081/
 resolution = 1920x1080
+use_usb_camera = 1
+usb_index = 0
 
 [SCANNER]
 dpi = 300
-color_mode = 
+color_mode = rgb
+
+[LABELS]
+save_location = 保存路径
+save_naming_format = 命名格式
+temp_location = 临时目录
+ip_address = 摄像头地址
+resolution = 分辨率
+dpi = 扫描精度
+color_mode = 颜色模式
 
