添加合并图片间隔选项及相应的用修改

--- a/config.ini
+++ b/config.ini
@@ -12,6 +12,7 @@ usb_index = 0
 [SCANNER]
 dpi = 300
 color_mode = rgb
+merge_image_interval = 5
 
 [LABELS]
 save_location = 保存路径
@@ -21,4 +22,5 @@ ip_address = 摄像头地址
 resolution = 分辨率
 dpi = 扫描精度
 color_mode = 颜色模式
+merge_image_interval = 合并图片间隔距离（单位：px）
 
