完善配置文件.

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 [PATHS]
 save_location = /home/ranvane/图片/HighSpeed-Document
 save_naming_format = %Y%m%d_%H%M%S
-temp_location = temp
+temp_location = /home/ranvane/图片/HighSpeed-Document
 
 [CAMERA]
 ip_address = http://admin:admin@192.168.10.10:8081/
