--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,7 @@
+[SYSTEM]
+os_type = Linux
+os_version = #63-Ubuntu SMP PREEMPT_DYNAMIC Tue Apr 15 19:04:15 UTC 2025
+
 [PATHS]
 save_location = /home/ranvane/图片/HighSpeed-Document
 save_naming_format = %Y%m%d_%H%M%S
@@ -25,4 +29,6 @@ color_mode = 颜色模式
 merge_image_interval = 合并图片间隔距离（单位：px）
 use_usb_camera = 是否使用 USB 摄像头
 usb_index = USB 摄像头索引
+os_type = 操作系统类型
+os_version = 操作系统版本
 
